--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
     </head>
     <body>
         <div class="container bg-white a-cont a-tbdr">
-            <header class="fixed-top bg-white a-tbdr">header</header>
-            <main class="position-relative bg-success a-tbdr">main</main>
+            <header class="bg-transparent fixed-top bg-white a-tbdr">header</header>
+            <main class="mt-5 a-mt-5 bg-success a-tbdr">main</main>
             <footer class="bg-warning a-tbdr">
                 <div class="border-top a-footer1">1</div>
                 <div class="a-footer2">2</div>
