--- a/index.html
+++ b/index.html
@@ -9,13 +9,19 @@
     </head>
     </head>
     <body>
-        <div class="container bg-white a-cont a-tbdr">
-            <header class="bg-transparent fixed-top bg-white a-tbdr">header</header>
-            <main class="mt-5 a-mt-5 bg-success a-tbdr">main</main>
+        <div class="container bg-white a-cont a-tbdr ">
+            <header class="fixed-top bg-white a-tbdr">
+                <div>
+                    <aside></aside>
+                    <section></section>
+                    <aside></aside>
+                </div>
+            </header>
+            <main class="bg-success position-realetive a-tbdr">main</main>
             <footer class="bg-warning a-tbdr">
-                <div class="border-top a-footer1">1</div>
-                <div class="a-footer2">2</div>
-                <div class="a-footer3">3</div>
+                <div class="a-footer1 border-top border-bottom">1</div>
+                <div class="a-footer2 border-bottom">2</div>
+                <div class="a-footer3 border-bottom">3</div>
                 <div class="a-footer4">4</div>
             </footer>
         </div>
