--- a/index.html
+++ b/index.html
@@ -4,20 +4,66 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>JustDial</title>
+        <link rel="icon" href="./img/Fevicon.png">
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
         <link href="./css/style.css" rel="stylesheet" />
     </head>
     </head>
     <body>
-        <div class="container bg-white a-cont a-tbdr ">
+        <div class="container bg-white  a-cont a-tbdr ">
             <header class="fixed-top bg-white a-tbdr">
-                <div>
-                    <aside></aside>
-                    <section></section>
-                    <aside></aside>
+                <div class="row">
+                    <div class="col-2 a-tbdr">
+                        <img class="img-fluid mt-2" src="./img/Logo.svg" />
+                    </div>
+                    <div class="col-3 a-tbdr">2</div>
+                    <div class="col-7 a-tbdr">
+                        <ul class="nav mt-3 a-menu">
+                            <li class="nav-item">
+                                <a class="ps-2 pe-2 mt-1 mb-1 nav-link" href="#"><img class="me-1" src="./img/nav_language_icon.svg">English<img class="ms-1" src="./img/down_arrow5.svg">
+                                </a>
+                                <ul class="nav flex-column a-submenu list-unstyled position-absolute border bg-white">
+                                    <li class="nav-item">
+                                        <a href="#" class="nav-link mt-1 mb-1 text-secondary-emphasis" active>Hindi</a>
+                                    </li>
+                                    <li class="nav-item">
+                                        <a href="#" class="nav-link mt-1 mb-1 text-secondary-emphasis">English</a>
+                                    </li>
+                                    <li class="nav-item">
+                                        <a href="#" class="nav-link mt-1 mb-1 text-secondary-emphasis">Marati</a>
+                                    </li>
+                                    <li class="nav-item">
+                                        <a href="#" class="nav-link mt-1 mb-1 text-secondary-emphasis">Panjabi</a>
+                                    </li>
+                                    <li class="nav-item">
+                                        <a href="#" class="nav-link mt-1 mb-1 text-secondary-emphasis">Telgu</a>
+                                    </li>
+                                </ul>
+                            </li>
+                            <li class="nav-item">
+                                <a class="ps-2 pe-2 mt-1 mb-1 nav-link text-secondary-emphasis" href="#">We are Hiring
+                                </a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="ps-2 pe-2 mt-1 mb-1 nav-link text-secondary-emphasis" href="#">Invetor Relations</a>
+                            </li>
+                            <li class="nav-item">
+                              <a class="ps-2 pe-2 mt-1 mb-1 nav-link text-secondary-emphasis"><img class="me-1" src="./img/nav_advertise_icon.svg">Advertise</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="ps-2 pe-2 mt-1 mb-1 nav-link text-secondary-emphasis"><img class="me-1" src="./img/nav_listing_icon.svg">Free Listing</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="ps-1 mt-1 mb-1 nav-link text-secondary-emphasis"><img class="ms-1" src="./img/notify_icon.svg">A</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="ps-0 mt-1 mb-1 nav-link text-secondary-emphasis"><img src="./img/icon.svg">Login/Sign-UP</a>
+                            </li>
+                        </ul>
+                    </div>
                 </div>
             </header>
-            <main class="bg-success position-realetive a-tbdr">main</main>
+            <main class="bg-success a-tbdr">main</main>
             <footer class="bg-warning a-tbdr">
                 <div class="a-footer1 border-top border-bottom">1</div>
                 <div class="a-footer2 border-bottom">2</div>
