--- a/index.html
+++ b/index.html
@@ -13,12 +13,29 @@
         <div class="container bg-white  a-cont a-tbdr ">
             <header class="fixed-top bg-white a-tbdr">
                 <div class="row">
-                    <div class="col-2 a-tbdr">
-                        <img class="img-fluid mt-2" src="./img/Logo.svg" />
+                    <div class="col-4 col-sm-2 a-form-col a-tbdr">
+                        <a href="#" class="d-block h-100">
+                            <img class="img-fluid w-50 pb-1 " src="./img/Logo.svg" />
+                        </a>
                     </div>
-                    <div class="col-3 a-tbdr">2</div>
-                    <div class="col-7 a-tbdr">
-                        <ul class="nav mt-3 a-menu">
+                    <div class="col-8 col-sm-4 a-form-col a-tbdr">2</div>
+                    <div class="col-12 col-sm-6 pt-1 a-tbdr p-0">
+                        <form class="d-sm-none d-md-none border border-2 border-dark rounded-3 pt-1 pb-0 p-2">
+                            <div class="row">
+                                <div class="col-2 p-0">
+                                    <img class=" btn h-100" src="./img/search2_hrd.svg">
+                                </div>
+                                <div class="col-8 p-0">
+                                    <input type="search" class="form-control border border-0" id="exampleInputPassword1">
+                                </div>
+                                <div class="col-2 p-0">
+                                    <button type="submit" class="btn float-end">
+                                        <img src="./img/nwtmic.svg">
+                                    </button>
+                                </div>
+                            </div>
+                         </form>
+                        <ul class="d-none d-sm-block nav mt-3 a-menu">
                             <li class="nav-item">
                                 <a class="ps-2 pe-2 mt-1 mb-1 nav-link" href="#"><img class="me-1" src="./img/nav_language_icon.svg">English<img class="ms-1" src="./img/down_arrow5.svg">
                                 </a>
