--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>JustDial</title>
         <link rel="icon" href="./img/Fevicon.png">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
         <link href="./css/style.css" rel="stylesheet" />
     </head>
@@ -18,15 +19,35 @@
                             <img class="img-fluid w-50 pb-1 " src="./img/Logo.svg" />
                         </a>
                     </div>
-                    <div class="col-8 col-sm-4 a-form-col a-tbdr">2</div>
-                    <div class="col-12 col-sm-6 pt-1 a-tbdr p-0">
-                        <form class="d-sm-none d-md-none border border-2 border-dark rounded-3 pt-1 pb-0 p-2">
+                    <div class="col-8 col-sm-3 a-form-col a-tbdr">
+                        <div class="d-block d-sm-none">
+                        <ul class="nav float-end a-tnr mt-2">
+                            <li class="nav-item"> 
+                              <a class="nav-link active bg-primary text-white rounded-pill pt-0 pb-1" aria-current="page" href="#">open App
+                            </a>
+                            </li>
+                            <li class="nav-item">
+                              <a class="nav-link pt-0 pb-1 mt-1" href="#"><i class="ms-2 text-dark fa-sharp fa-regular fa-bell"></i>
+                              </a>
+                            </li>
+                            <li class="nav-item">
+                              <a class="nav-link pt-0 pb-1 mt-1" href="#">
+                                <i class=" text-dark fa-solid fa-bars"></i>
+                            </a>
+                            </li>
+                          </ul>
+                          </div>
+                    </div>
+                    <div class="col-12 col-sm-7 pt-1 a-tbdr p-0">
+                        <form class="d-sm-none d-md-none border border-2 border-dark-subtle rounded-3 pt-1 pb-0 p-2">
                             <div class="row">
-                                <div class="col-2 p-0">
-                                    <img class=" btn h-100" src="./img/search2_hrd.svg">
+                                <div class="col-1 p-0">
+                                    <button class="ntn mt-2 border-0">
+                                        <i class="fa-solid fa-magnifying-glass text-body-tertiary"></i>
+                                    </button>
                                 </div>
-                                <div class="col-8 p-0">
-                                    <input type="search" class="form-control border border-0" id="exampleInputPassword1">
+                                <div class="col-9 p-0">
+                                    <input type="search" placeholder="packers and movers" class="form-control shadow-none border border-0" id="exampleInputPassword1">
                                 </div>
                                 <div class="col-2 p-0">
                                     <button type="submit" class="btn float-end">
@@ -35,7 +56,9 @@
                                 </div>
                             </div>
                          </form>
-                        <ul class="d-none d-sm-block nav mt-3 a-menu">
+                            <div class="nav-item d-none d-sm-block a-tbdr">
+                                <ul class="nav mt-3 ms-3 a-menu">    
+                            
                             <li class="nav-item">
                                 <a class="ps-2 pe-2 mt-1 mb-1 nav-link" href="#"><img class="me-1" src="./img/nav_language_icon.svg">English<img class="ms-1" src="./img/down_arrow5.svg">
                                 </a>
@@ -56,6 +79,7 @@
                                         <a href="#" class="nav-link mt-1 mb-1 text-secondary-emphasis">Telgu</a>
                                     </li>
                                 </ul>
+                            
                             </li>
                             <li class="nav-item">
                                 <a class="ps-2 pe-2 mt-1 mb-1 nav-link text-secondary-emphasis" href="#">We are Hiring
@@ -80,7 +104,93 @@
                     </div>
                 </div>
             </header>
-            <main class="bg-success a-tbdr">main</main>
+            <main class="bg-white pt-3 a-tbdr">
+                <div class="a-m1 d-block d-sm-none">
+                    <div class="row m-0">
+                        <div class="col-3 p-0 a-tbdr">
+                            <a href="#" class="btn text-dark text-center">
+                                <img class="img-fluid" src="./img/shop_online.svg" />shop online
+                            </a>
+                        </div>
+                        <div class="col-3 a-tbdr p-0">
+                            <a href="#" class="btn btn-sm text-dark text-center">
+                                <img class="img-fluid" src="./img/b2b.gif" />B2B
+                            </a>
+                        </div>
+                        <div class="col-3 p-0 a-tbdr">
+                            <a href="#" class="btn text-dark text-center">
+                                <img class="img-fluid" src="./img/doctors.svg" />Doctors
+                            </a>
+                        </div>
+                        <div class="col-3 p-0 a-tbdr">
+                            <a hfer="#" class="btn btn-lg text-dark text-center">
+                                <img class="img-fluid" src="./img/travelbookings.svg" />Travel
+                            </a>
+                        </div>
+                        <div class="col-3 p-0 a-tbdr">
+                            <a hfer="#" class="btn text-dark text-center">
+                                <img class="img-fluid" src="./img/beauty.svg" />Beauty
+                            </a>
+                        </div>
+                        <div class="col-3 a-tbdr p-0">
+                            <a hfer="#" class="btn text-dark">
+                                <img class="img-fluid" src="./img/consultants.svg" />consultants
+                            </a>
+                        </div>
+                        <div class="col-3 p-0 a-tbdr">
+                            <a hfer="#" class="btn btn-sm text-dark text-center">
+                                <img class="img-fluid" src="./img/packers_movers_2023.svg" />packers & movers
+                            </a>
+                        </div>
+                        <div class="col-3 a-tbdr p-0">
+                            <a hfer="#" class="btn text-dark">
+                                <img class="img-fluid" src="./img/weddingrequisites.svg" />wedding requisites
+                            </a>
+                        </div>
+                        <div class="col-3 p-0 a-tbdr">
+                            <a hfer="#" class="btn btn-sm text-dark">
+                                <img class="img-fluid" src="./img/Home-Services_2x.gif" />Home Services
+                            </a>
+                        </div>
+                        <div class="col-3 p-0 a-tbdr">
+                            <a hfer="#" class="btn btn-lg text-dark">
+                                <img src="./img/jobs.svg" />Jobs
+                            </a>
+                        </div>
+                        <div class="col-3 p-0 a-tbdr">
+                            <a hfer="#" class="btn text-dark">
+                                <img class="img-fluid" src="./img/repairs&services.svg" />Repairs & Services
+                            </a>
+                        </div>
+                        <div class="col-3 p-0 a-tbdr">
+                            <a hfer="#" class="btn text-dark">
+                                <img class="img-fluid" src="./img/pg,hostels.svg" />PG/Hostel
+                            </a>
+                        </div>
+                        <div class="col-3 p-0 a-tbdr">
+                            <a hfer="#" class="btn text-dark">
+                                <img class="img-fluid" src="./img/loans.svg" />Loans
+                            </a>
+                        </div>
+                        <div class="col-3 p- a-tbdr">
+                            <a hfer="#" class="btn btn-sm text-dark">
+                                <img class="img-fluid" src="./img/realestate.svg" />Reale State
+                            </a>
+                        </div>
+                        <div class="col-3 p-0 a-tbdr">
+                            <a hfer="#" class="btn text-dark">
+                                <img class="img-fluid" src="./img/education.svg" />Education
+                            </a>
+                        </div>
+                        <div class="col-3 p- a-tbdr">
+                            <a hfer="#" class="btn  text-dark">
+                                <img class="img-fluid" src="./img/showmore.svg" />Show More
+                            </a>
+                        </div>
+                    </div>
+                </div>
+                <div class="m2">m2</div>
+            </main>
             <footer class="bg-warning a-tbdr">
                 <div class="a-footer1 border-top border-bottom">1</div>
                 <div class="a-footer2 border-bottom">2</div>
