--- a/index.html
+++ b/index.html
@@ -3,19 +3,46 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>JustDial</title>
-        <link rel="icon" href="./img/Fevicon.png">
+        <title>Justdial - Local Search, Social, News, Videos, Shopping</title>
+        <link rel="shortcut icon" href="https://static.127777.com/tools/img/favicon.ico" type="image/x-icon">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
         <link href="./css/style.css" rel="stylesheet" />
     </head>
     </head>
     <body>
+        <div class="modal Hide" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+            <div class="modal-dialog modal-fullscreen">
+              <div class="modal-content">
+                <div class="modal-header border-bottom-0">
+                  <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body">
+                    <ul class="nav flex-column">
+                        <li class="nav-item">
+                          <a class="nav-link active" aria-current="page" href="#">Active</a>
+                        </li>
+                        <li class="nav-item">
+                          <a class="nav-link" href="#">Link</a>
+                        </li>
+                        <li class="nav-item">
+                          <a class="nav-link" href="#">Link</a>
+                        </li>
+                        <li class="nav-item">
+                          <a class="nav-link">Disabled</a>
+                        </li>
+                    </ul>
+                </div>
+                <div class="modal-footer">
+                </div>
+              </div>
+            </div>
+          </div>
         <div class="container bg-white  a-cont a-tbdr ">
             <header class="fixed-top bg-white a-tbdr">
                 <div class="row">
                     <div class="col-4 col-sm-2 a-form-col a-tbdr">
-                        <a href="#" class="d-block h-100">
+                        <a href="#" class="d-flex align-items-center d-block h-100">
                             <img class="img-fluid w-50 pb-1 " src="./img/Logo.svg" />
                         </a>
                     </div>
@@ -31,8 +58,8 @@
                               </a>
                             </li>
                             <li class="nav-item">
-                              <a class="nav-link pt-0 pb-1 mt-1" href="#">
-                                <i class=" text-dark fa-solid fa-bars"></i>
+                              <a class="nav-link pt-0 pb-1 mt-1" href="#" data-bs-toggle="modal" data-bs-target="#exampleModal">
+                                <i class="text-dark fa-solid fa-bars"></i>
                             </a>
                             </li>
                           </ul>
@@ -192,10 +219,33 @@
                 <div class="m2">m2</div>
             </main>
             <footer class="bg-warning a-tbdr">
-                <div class="a-footer1 border-top border-bottom">1</div>
-                <div class="a-footer2 border-bottom">2</div>
-                <div class="a-footer3 border-bottom">3</div>
-                <div class="a-footer4">4</div>
+                <div class="d-block d-sm-none">
+                    <div class="row text-center">
+                        <div class="col p-1  a-tbdr">
+                            <a href="#" class="btn"><img class="img-fluid p-0" src="./img/home.svg" />Home
+                            </a>
+                        </div>
+                        <div class="col p-2 a-tbdr">
+                            <a href="#" class="btn"><img class="img-fluid p-0" src="./img/b2b-icn.svg" />B2B
+                            </a>
+                        </div>
+                        <div class="col p-1 a-tbdr">
+                            <a href="#" class="btn"><img class="img-fluid p-0" src="./img/jdpay-icn.svg" /></a>Pay
+                        </div>
+                        <div class="col p-3 a-tbdr">
+                            <a href="#" class="btn"><img class="img-fluid p-0" src="./img/news-default.webp" /></a>News
+                        </div>
+                        <div class="col p-1 a-tbdr">
+                            <a href="#" class="btn"><img class="img-fluid p-0" src="./img/ecmmore.svg" /></a>More
+                        </div>
+                    </div>
+                </div>
+                <div class="d-none d-sm-block">
+                    <div class="a-footer1 border-top border-bottom">1</div>
+                    <div class="a-footer2 border-bottom">2</div>
+                    <div class="a-footer3 border-bottom">3</div>
+                    <div class="a-footer4 border-top">4</div>
+                </div>
             </footer>
         </div>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script>
