--- a/index.html
+++ b/index.html
@@ -15,22 +15,69 @@
             <div class="modal-dialog modal-fullscreen">
               <div class="modal-content">
                 <div class="modal-header border-bottom-0">
-                  <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                    <div class="float-start">
+                        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                    </div>
                 </div>
                 <div class="modal-body">
+                    
                     <ul class="nav flex-column">
-                        <li class="nav-item">
-                          <a class="nav-link active" aria-current="page" href="#">Active</a>
+                        <div class="row">
+                            <div class="col">
+                                <a class="btn text-body-emphasis fw-bold" href="#">Sign in</a>
+                            </div>
+                            <div class="col text-end">
+                                <a>
+                                    <img class="img-fluid w-25" src="./img/profiledefault.png" /></div>
+                                </a>
+                        </div>
+                        <div class="mt-4">
+                            <button type="button" class="btn btn-outline-secondary rounded-pill me-3">Saved</button>
+                            <button type="button" class="btn btn-outline-secondary rounded-pill me-3">Favorites</button>
+                            <button type="button" class="btn btn-outline-secondary rounded-pill me-3">Interests</button>
+                        </div>
+                        <li class="nav-item mt-4">
+                          <a class="nav-link text-body-secondary active" aria-current="page" href="#"><img class="img-fluid me-3" src="./img/Languageicn.svg"/>English</a>
                         </li>
                         <li class="nav-item">
-                          <a class="nav-link" href="#">Link</a>
+                          <a class="nav-link text-body-secondary" href="#"><img class="img-fluid me-3" src="./img/helpicn.svg" />Customer Service</a>
                         </li>
                         <li class="nav-item">
-                          <a class="nav-link" href="#">Link</a>
+                          <a class="nav-link text-body-secondary" href="#"><img class="img-fluid me-3" src="./img/list.svg" />List your Business</a>
                         </li>
                         <li class="nav-item">
-                          <a class="nav-link">Disabled</a>
+                          <a class="nav-link text-body-secondary" hrer="#"><img class="img-fluid me-3" src="./img/advertiseicn (1).svg" />Advertise</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-body-secondary" href="#"><img class="img-fluid me-3" src="./img/mytransactions-icn.svg" />My Transactions</a>
+                          </li>
+                          <li class="nav-item">
+                            <a class="nav-link text-body-secondary" href="#"><img class="img-fluid me-3" src="./img/mytransactions-icn.svg" />Whishlist</a>
+                          </li>
+                          <li class="nav-item">
+                            <a class="nav-link text-body-secondary" href="#"><img class="img-fluid me-3" src="./img/managequotesicn (1).svg" />manage Quotes</a>
+                          </li>
+                          <li class="nav-item">
+                            <a class="nav-link text-body-secondary" href="#"><img class="img-fluid me-3" src="./img/we-are-hiring.svg" />We are hiring</a>
+                          </li>
+                          <li class="nav-item">
+                            <a class="nav-link text-body-secondary" href="#"><img class="img-fluid me-3" src="./img/settings.svg" />Settings</a>
+                          </li>
+                          <li class="nav-item">
+                            <a class="nav-link text-body-secondary" href="#"><img class="img-fluid me-3" src="./img/privacyicn.svg" />privacy Policy</a>
+                          </li>
+                          <li class="nav-item">
+                            <a class="nav-link text-body-secondary" href="#"><img class="img-fluid me-3" src="./img/investors_relation.svg" />Invetor Relations</a>
+                          </li>
+                          <li class="nav-item">
+                            <a class="nav-link text-body-secondary" href="#"><img class="img-fluid me-3" src="./img/newproductsicn.svg" />What's New</a>
+                          </li>
+                          <li class="nav-item">
+                            <a class="nav-link text-body-secondary" href="#"><img class="img-fluid me-3" src="./img/newproductsicn.svg" />Others</a>
+                          </li>
+                          <li class="nav-item">
+                            <a class="nav-link text-body-secondary" href="#"><img class="img-fluid me-3" src="./img/logouticn1.svg" />Logout</a>
+                          </li>
                     </ul>
                 </div>
                 <div class="modal-footer">
@@ -216,7 +263,113 @@
                         </div>
                     </div>
                 </div>
-                <div class="m2">m2</div>
+                <div class="a-m2 mt-2">
+                    <a href="#">
+                        <img class="img-fluid" src="./img/free_listing_banner _14march.avif" />
+                    </a>
+                </div>
+                <div class="a-m3">
+                    <div class="row mt-3">
+                        <div class="col ps-1 pe-1">
+                            <a href="#">
+                                <img class="img-fluid" src="./img/food.webp" />
+                            </a>
+                        </div>
+                        <div class="col ps-1 pe-1">
+                            <a href="#">
+                                <img class="img-fluid" src="./img/JioSim.webp" />
+                            </a>
+                        </div>
+                        <div class="col ps-1 pe-1">
+                            <a href="#">
+                                <img class="img-fluid" src="./img/flight_hmpg_banner_27feb.avif" />
+                            </a>
+                        </div>
+                        <div class="col ps-1 pe-1">
+                            <a href="#">
+                                <img class="img-fluid" src="./img/paybills.webp" />
+                            </a>
+                        </div>
+                    </div>
+                </div>
+                <div class="a-m4">
+                    <div class="row mt-2">
+                        <div class="col">
+                            <a href="#" class="btn float-start">Home Services</a>
+                        </div>
+                        <div class="col">
+                            <a href="#">
+                                <img class="img-fluid float-end img-center" src="https://akam.cdn.jdmagicbox.com/images/icontent/newwap/newprot_w/right-arrow-21.svg" />
+                            </a>
+                        </div>
+                    </div>
+                    <div class="row mt-2">
+                        <div class="col ps-1 pe-1">
+                            <a href="#">
+                                <img class="img-fluid" src="https://akam.cdn.jdmagicbox.com/images/icons/android/newhome/2/acrepairservice.jpg?v=1" data-src="https://akam.cdn.jdmagicbox.com/images/icons/android/newhome/2/acrepairservice.jpg?v=1" class="imgratio lazify laizfy--handled" alt="">
+                            </a>
+                        </div>
+                        <div class="col ps-1 pe-1">
+                            <a href="#">
+                                <img class="img-fluid" src="https://akam.cdn.jdmagicbox.com/images/icons/android/newhome/2/pestcontrol.jpg?v=1" data-src="https://akam.cdn.jdmagicbox.com/images/icons/android/newhome/2/pestcontrol.jpg?v=1" class="imgratio lazify laizfy--handled" alt="">
+                            </a>
+                        </div>
+                        <div class="col ps-1 pe-1">
+                            <a href="#">
+                                <img class="img-fluid" src="https://akam.cdn.jdmagicbox.com/images/icons/android/newhome/2/packersmovers.jpg?v=1" data-src="https://akam.cdn.jdmagicbox.com/images/icons/android/newhome/2/packersmovers.jpg?v=1" class="imgratio lazify laizfy--handled" alt="">
+                            </a>
+                        </div>
+                        <div class="col ps-1 pe-1">
+                            <a href="#">
+                                <img class="img-fluid" src="https://akam.cdn.jdmagicbox.com/images/icons/android/newhome/2/tvrepair.jpg?v=2" data-src="https://akam.cdn.jdmagicbox.com/images/icons/android/newhome/2/tvrepair.jpg?v=2" class="imgratio lazify laizfy--handled" alt="">
+                            </a>
+                        </div>
+                    </div>
+                </div>
+                <div class="a-m5">
+                    <div class="row mt-2">
+                        <div class="col">
+                            <a href="#" class="btn float-start">Rent & Hire</a>
+                        </div>
+                        <div class="col">
+                            <a href="#">
+                                <img class="img-fluid float-end img-center" src="https://akam.cdn.jdmagicbox.com/images/icontent/newwap/newprot_w/right-arrow-21.svg" />
+                            </a>
+                        </div>
+                    </div>
+                    <div class="row mt-3">
+                        <div class="col ps-1 pe-1">
+                            <a href="#">
+                                <img class="img-fluid" src="https://akam.cdn.jdmagicbox.com/images/icons/android/newhome/2/hirevehicles.jpg?v=1" data-src="https://akam.cdn.jdmagicbox.com/images/icons/android/newhome/2/hirevehicles.jpg?v=1" class="imgratio lazify laizfy--handled" alt="">
+                            </a>
+                        </div>
+                        <div class="col ps-1 pe-1">
+                            <a href="#">
+                                <img class="img-fluid" src="https://akam.cdn.jdmagicbox.com/images/icons/android/newhome/2/rentclothes.jpg?v=1" data-src="https://akam.cdn.jdmagicbox.com/images/icons/android/newhome/2/rentclothes.jpg?v=1" class="imgratio lazify laizfy--handled" alt="">
+                            </a>
+                        </div>
+                        <div class="col ps-1 pe-1">
+                            <a href="#">
+                                <img class="img-fluid" src="https://akam.cdn.jdmagicbox.com/images/icons/android/newhome/2/rentfurniture.jpg?v=1" data-src="https://akam.cdn.jdmagicbox.com/images/icons/android/newhome/2/rentfurniture.jpg?v=1" class="imgratio lazify laizfy--handled" alt="">
+                            </a>
+                        </div>
+                        <div class="col ps-1 pe-1">
+                            <a href="#">
+                                <img class="img-fluid" src="https://akam.cdn.jdmagicbox.com/images/icons/android/newhome/2/rentappliances.jpg?v=1" data-src="https://akam.cdn.jdmagicbox.com/images/icons/android/newhome/2/rentappliances.jpg?v=1" class="imgratio lazify laizfy--handled" alt="">
+                            </a>
+                        </div>
+                    </div>
+                    <div class="row mt-2">
+                        <div class="col">
+                            <a href="#" class="btn float-start">JD Collections</a>
+                        </div>
+                        <div class="col">
+                            <a href="#">
+                                <img class="img-fluid float-end img-center" src="https://akam.cdn.jdmagicbox.com/images/icontent/newwap/newprot_w/right-arrow-21.svg" />
+                            </a>
+                        </div>
+                    </div>
+                </div>
             </main>
             <footer class="bg-warning a-tbdr">
                 <div class="d-block d-sm-none">
