--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
             </div>
           </div>
         <div class="container bg-white  a-cont a-tbdr ">
-            <header class="fixed-top bg-white a-tbdr">
+            <header class="border-bottom fixed-top bg-white a-tbdr">
                 <div class="row">
                     <div class="col-4 col-sm-2 a-form-col a-tbdr">
                         <a href="#" class="d-flex align-items-center d-block h-100">
@@ -230,8 +230,8 @@
                     </div>
                 </div>
             </header>
-            <main class="bg-white pt-3 a-tbdr">
-                <div class="a-m1 d-block d-sm-none">
+            <main class="bg-white a-tbdr a-mt-5">
+                <div class="a-m1 d-block mt-4 d-sm-none d-block d-sm-none">
                     <div class="row m-0">
                         <div class="col-3 p-0 a-tbdr">
                             <a href="#" class="btn text-dark text-center">
@@ -315,12 +315,12 @@
                         </div>
                     </div>
                 </div>
-                <div class="a-m2 mt-2">
+                <div class="a-m2 d-block d-sm-none mt-2">
                     <a href="#">
                         <img class="img-fluid" src="./img/free_listing_banner _14march.avif" />
                     </a>
                 </div>
-                <div class="a-m3">
+                <div class="a-m3 d-block d-sm-none">
                     <div class="row mt-3">
                         <div class="col ps-1 pe-1">
                             <a href="#">
@@ -344,14 +344,12 @@
                         </div>
                     </div>
                 </div>
-                <div class="a-m4">
-                    <div class="row mt-2">
-                        <div class="col">
-                            <a href="#" class="btn float-start">Home Services</a>
-                        </div>
-                        <div class="col">
+                <div class="a-m4 d-block d-sm-none">
+                    <div class="row mt-0 mb-1">
+                        <div class="col position-relative mt-1">
                             <a href="#">
-                                <img class="img-fluid float-end img-center" src="https://akam.cdn.jdmagicbox.com/images/icontent/newwap/newprot_w/right-arrow-21.svg" />
+                                <img class="img-fluid float-end img-center mt-2" src="https://akam.cdn.jdmagicbox.com/images/icontent/newwap/newprot_w/right-arrow-21.svg" />
+                                <span class="btn position-absolute bottom-0 start-0 text-dark">Home Services</span>
                             </a>
                         </div>
                     </div>
@@ -378,14 +376,12 @@
                         </div>
                     </div>
                 </div>
-                <div class="a-m5">
+                <div class="a-m5 d-block d-sm-none">
                     <div class="row mt-2">
-                        <div class="col">
-                            <a href="#" class="btn float-start">Rent & Hire</a>
-                        </div>
-                        <div class="col">
+                       <div class="col position-relative">
                             <a href="#">
                                 <img class="img-fluid float-end img-center" src="https://akam.cdn.jdmagicbox.com/images/icontent/newwap/newprot_w/right-arrow-21.svg" />
+                                <span class="position-absolute bottom-0 start-0 mt-2 text-dark ">Rent & Hire</span>
                             </a>
                         </div>
                     </div>
@@ -422,15 +418,87 @@
                         </div>
                     </div>
                 </div>
+                <div class="a-m6 d-block d-sm-none">
+                    <div class="row m-0">
+                        <div class="col ps-0 pe-1">
+                            <a href="#">
+                                <img class="img-fluid" src="https://images.jdmagicbox.com/quickquotes/listicle/listicle_1681914033423_2uol5_1040x500.jpg" alt="" title="">
+                            </a>
+                            <div class="font11 home_cur_txt1">Infinity and Beyond: Swim in Marvellous Infinity Swimming Pools at These 10 Places Near and</div>
+                            <div class="font11 mt-15 home_cur_txt2 text-primary">Explore</div>
+                        </div>
+                        <div class="col ps-1 pe-0">
+                            <a class="#">
+                                <img class="img-fluid" src="https://images.jdmagicbox.com/quickquotes/listicle/listicle_1688623915068_w8y3a_847x400.jpg" alt="" title="">
+                            </a>
+                            <div class="font11 home_cur_txt1">Wilderness Up Close - Part II: 16 Luxurious Resorts and Hotels for a Thrilling Wildlife Safari Experience in India</div>
+                            <div class="font11 mt-15 home_cur_txt2 text-primary">Explore</div>
+                        </div>
+                    </div>
+                </div>
+                <div class="m11 d-none d-sm-block border">
+                    <div class="row m-0">
+                        <div class="col-6 p-0 h-100 a-tbdr">
+                            <div id="carouselExampleIndicators" class="carousel slide">
+                                <div class="carousel-indicators">
+                                  <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+                                  <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
+                                  <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
+                                </div>
+                                <div class="carousel-inner">
+                                  <div class="carousel-item active">
+                                    <img class="img-fluid" src="https://akam.cdn.jdmagicbox.com/images/icontent/newwap/web2022/banner_CCTV.png" class="d-block w-100" alt="...">
+                                  </div>
+                                  <div class="carousel-item">
+                                    <img class="img-fluid" src="https://akam.cdn.jdmagicbox.com/images/icontent/newwap/web2022/banner_hotels.png?v=1.0" class="d-block w-100" alt="...">
+                                  </div>
+                                  <div class="carousel-item">
+                                    <img class="img-fluid" src="https://akam.cdn.jdmagicbox.com/images/icontent/newwap/web2022/banner_interiordesigners.png" class="d-block w-100" alt="...">
+                                  </div>
+                                  <div class="carousel-item">
+                                    <img class="img-fluid" src="https://akam.cdn.jdmagicbox.com/images/icontent/newwap/web2022/banner_webflight_23feb.png" class="d-block w-100" alt="...">
+                                  </div>
+                                  <div class="carousel-item">
+                                    <img class="img-fluid" src="https://akam.cdn.jdmagicbox.com/images/icontent/newwap/web2022/banner_bills.png" class="d-block w-100" alt="...">
+                                  </div>
+                                  <div class="carousel-item">
+                                    <img class="img-fluid" src="https://akam.cdn.jdmagicbox.com/images/icontent/newwap/web2022/banner_packersmovers.png?v=1.1" class="d-block w-100" alt="...">
+                                  </div>
+                                </div>
+                                <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
+                                  <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                                  <span class="visually-hidden">Previous</span>
+                                </button>
+                                <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
+                                  <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                                  <span class="visually-hidden">Next</span>
+                                </button>
+                              </div>
+
+                        </div>
+                        <div class="col-6 p-0 h-100 a-tbdr border">
+                            <div class="row m-0 h-100 a-tbdr border">
+                                <div class="col-3 h-100 a-tbdr border">
+                                    <a class="#">
+                                        <img clss="img-fluid" src="https://akam.cdn.jdmagicbox.com/images/icons/website/newhome/1/b2b.png?v=1.01?w=1920&q=75" />
+                                    </a>
+                                </div>
+                                <div class="col-3 h-100 a-tbdr border">2</div>
+                                <div class="col-3 h-100 a-tbdr border">3</div>
+                                <div class="col-3 h-100 a-tbdr border">4</div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </main>
-            <footer class="bg-warning a-tbdr">
+            <footer class="bg-white a-tbdr">
                 <div class="d-block d-sm-none">
                     <div class="row text-center">
-                        <div class="col p-1  a-tbdr">
+                        <div class="col p-1  a-tbdr d-flex align-items-center d-flex justify-content-center">
                             <a href="#" class="btn"><img class="img-fluid p-0" src="./img/home.svg" />Home
                             </a>
                         </div>
-                        <div class="col p-2 a-tbdr">
+                        <div class="col p-2 a-tbdr ">
                             <a href="#" class="btn"><img class="img-fluid p-0" src="./img/b2b-icn.svg" />B2B
                             </a>
                         </div>
