--- a/index.html
+++ b/index.html
@@ -436,12 +436,22 @@
                         </div>
                     </div>
                 </div>
-                <div class="a-m11 d-none d-sm-block border">
-                    <div class="row m-0 a-tbdr h-100">
-                        <div class="col-8 p-0 h-100">
-                            <h3 class="ps-3">Search across‘3.8 Crore+</h3>
+                <div class="a-m11 d-none d-sm-block">
+                    <div class="row">
+                        <div class="col-8 a-tbdr"> 
                             <form>
-                                <div class="row m-0 a-tbdr">
+                                <div class="row m-0 a-tbdr" style="height:50px;overflow:hidden;">
+                                    <div class="col-3 p-0 a-tbdr h-100">
+                                        <span class="fw-bold fs-2 text-dark">Search across</span>
+                                    </div>
+                                    <div class="col-9 p-0 a-tbdr h-100 a-rajan" style="height:50px;overflow:hidden;">
+                                        <div class="a-animation">
+                                            <span class="d-block fw-bold fs-3 text-dark">'3.8 Crore+‘<span class="text-primary">Businesses</span></span>
+                                            <span class="d-block fw-bold fs-3 text-dark">'3.3 Crore+’<span class="text-primary">Products & Services</span></span>
+                                        </div>
+                                    </div>
+                               </div>
+                               <div class="row m-0 a-tbdr">
                                     <div class="col-4 a-tbdr">
                                         <input type="text" class="form-control shadow-none border-dark pt-3 pb-3" placeholder="Anand Nagar, Bhopal" aria-label="First name">
                                     </div>
@@ -465,7 +475,7 @@
                                 </div>
                             </form>
                         </div>
-                        <div class="col-4 p-0 a-tbdr h-100">
+                        <div class="col-4 p-0 a-tbdr">
                             <button class="btn btn-sm border border-dark text-dark position-relative float-end me-5 mt-5 fw-medium">Download App <img width="27" class="position-absolute border border-dark rounded-1 bottom-0  bg-white" style="bottom: -10px !important;" src="https://akam.cdn.jdmagicbox.com/images/icontent/newwap/web2022/getapp_jd.gif" /></button>
                         </div>
                     </div>
@@ -473,30 +483,36 @@
                 <div class="a-m22 d-none d-sm-block border">
                     <div class="row m-0">
                         <div class="col-6 p-0 h-100 a-tbdr">
-                            <div id="carouselExampleIndicators" class="carousel slide a-mainslider">
+                            <div id="carouselExampleIndicators" class="carousel slide a-mainslider" data-bs-ride="carousel">
                                 <div class="carousel-indicators">
                                   <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active rounded-circle" aria-current="true" aria-label="Slide 1"></button>
                                   <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2" class="rounded-circle"></button>
                                   <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3" class="rounded-circle"></button>
                                 </div>
                                 <div class="carousel-inner rounded-4 pe-2 ps-2">
-                                  <div class="carousel-item active">
+                                  <div class="carousel-item active" data-bs-interval="2000">
                                     <img class="img-fluid" src="https://akam.cdn.jdmagicbox.com/images/icontent/newwap/web2022/banner_CCTV.png" class="d-block w-100" alt="...">
                                   </div>
-                                  <div class="carousel-item">
+                                  <div class="carousel-item" data-bs-interval="2000">
                                     <img class="img-fluid" src="https://akam.cdn.jdmagicbox.com/images/icontent/newwap/web2022/banner_hotels.png?v=1.0" class="d-block w-100" alt="...">
                                   </div>
-                                  <div class="carousel-item">
+                                  <div class="carousel-item" data-bs-interval="2000">
                                     <img class="img-fluid" src="https://akam.cdn.jdmagicbox.com/images/icontent/newwap/web2022/banner_interiordesigners.png" class="d-block w-100" alt="...">
                                   </div>
-                                  <div class="carousel-item">
+                                  <div class="carousel-item" data-bs-interval="2000">
                                     <img class="img-fluid" src="https://akam.cdn.jdmagicbox.com/images/icontent/newwap/web2022/banner_webflight_23feb.png" class="d-block w-100" alt="...">
                                   </div>
-                                  <div class="carousel-item">
+                                  <div class="carousel-item" data-bs-interval="2000">
                                     <img class="img-fluid" src="https://akam.cdn.jdmagicbox.com/images/icontent/newwap/web2022/banner_bills.png" class="d-block w-100" alt="...">
                                   </div>
-                                  <div class="carousel-item">
+                                  <div class="carousel-item" data-bs-interval="2000">
                                     <img class="img-fluid" src="https://akam.cdn.jdmagicbox.com/images/icontent/newwap/web2022/banner_packersmovers.png?v=1.1" class="d-block w-100" alt="...">
+                                  </div>
+                                  <div class="carousel-item" data-bs-interval="2000">
+                                    <img class="img-fluid" src="https://akam.cdn.jdmagicbox.com/images/icontent/newwap/web2022/banner_bills.png">
+                                  </div>
+                                  <div class="carousel-item" data-bs-interval="2000">
+                                    <img class="img-fluid" src="https://akam.cdn.jdmagicbox.com/images/icontent/newwap/web2022/banner_packersmovers.png?v=1.1">
                                   </div>
                                 </div>
                                 <button class="carousel-control-prev a-ccp top-50" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
@@ -510,30 +526,34 @@
                               </div>
 
                         </div>
-                        <div class="col-6 p-0 h-100 a-tbdr border">
-                            <div class="row m-0 h-100 a-tbdr border">
-                                <div class="col-3 rounded-4 h-100 a-tbdr border bg-primary">
-                                    <a href="#"><div class="text-white">B2B</div>
-                                        <div class="home_banner_subtext text-white fs-6 opacity-50">Quick Quotes</div>
-                                        <img class="img-fluid p-1" src="./img/b2b.webp" />
+                        <div class="col-6 a-tbdr">
+                            <div class="row m-0 h-100">
+                                <div class="col-3 pe-0 h-100 rounded-4 a-tbdr border" style="background-color: #0F7DD8;">
+                                    <a href="#" class="text-decoration-none a-xyz">
+                                        <span class="d-block fw-bold fs-5 text-white">B2B</span>
+                                        <span class="home_banner_subtext text-white fs-6 opacity-50">Quick Quotes</span>
+                                        <img class="img-fluid" src="./img/b2b.webp" />
                                     </a>
                                 </div>
-                                <div class="col-3 h-100 rounded-4 a-tbdr border" style="background-color: #00AC7D ;">
-                                    <a href="#"><div class="text-white">XPERTS</div>
-                                        <div class="text-white fs-6 opacity-50">Home services</div>
-                                        <img class="img-fluid p-1" src="./img/xperts.webp" />
+                                <div class="col-3 pe-0 h-100 rounded-4 a-tbdr border" style="background-color: #00AC7D ;">
+                                    <a href="#" class="a-xyz text-decoration-none">
+                                        <span class="text-white d-block fw-bold fs-5">XPERTS</span>
+                                        <span class="fs-6 text-white opacity-50">Home services</span>
+                                        <img class="img-fluid" src="./img/xperts.webp" />
                                     </a>
                                 </div>
-                                <div class="col-3 h-100 rounded-4 a-tbdr border" style="background-color: #A5A6E3;">
-                                    <a href="#"><div class="text-white">Realestate</div>
-                                        <div class="text-white fs-6 opacity-50">Finest Agents</div>
-                                        <img class="img-fluid p-1" src="./img/realestate.webp" />
+                                <div class="col-3 pe-0 h-100 rounded-4 a-tbdr border" style="background-color: #A5A6E3;">
+                                    <a href="#" class="a-xyz text-decoration-none">
+                                        <span class=" d-block text-white fs-5">Realestate</span>
+                                        <span class="text-white fs-6 text-white opacity-50">Finest Agents</span>
+                                        <img class="img-fluid" src="./img/realestate.webp" />
                                     </a>
                                 </div>
-                                <div class="col-3 h-100 rounded-4 a-tbdr border" style="background-color: #097C65;">
-                                    <a href="#"><div class="text-white">Doctors</div>
-                                        <div class="text-white fs-6 opacity-50">Book Now</div>
-                                        <img class="img-fluid p-1 " src="./img/web_doctor_image.webp" />
+                                <div class="col-3 pe-0 h-100 rounded-4 a-tbdr border" style="background-color: #097C65;">
+                                    <a href="#" class="a-xyz text-decoration-none">
+                                        <span class=" d-block text-white fs-5">Doctors</span>
+                                        <span class=" fs-6 text-white opacity-50">Book Now</span>
+                                        <img class="img-fluid" src="./img/web_doctor_image.webp" />
                                     </a>
                                 </div>
                             </div>
