--- a/index.html
+++ b/index.html
@@ -979,21 +979,76 @@
                         </div>
                     </div>                     
                 </div>
-                <div class="a-m-Popular-Brands a-tbdr d-none d-sm-block mb-5">
+                <div class="a-m-Popular-Brands a-tbdr position-relative d-none d-sm-block overflow-hidden mb-5">
                     <h3 class="fw-bold">Popular Brands</h3>
+                    <a href="#" class="btn btn-light shadow-sm border rounded-0 rounded-end a-pop-lc position-absolute top-50">
+                        <i class="fa-solid fa-chevron-left fa-lg"></i>
+                    </a>
+                    <a href="#" class="btn btn-light shadow-sm border rounded-0 rounded-start a-pop-lc position-absolute top-50" style="right: 0px !important;">
+                        <i class="fa-solid fa-chevron-right fa-lg"></i>
+                    </a>
                     <div class="a-pop-slider a-tbdr">
-                        <ul class="nav">
-                            <li class="nav-item">
-                              <a class="nav-link" href="#">Active</a>
+                        
+                        <ul class="nav h-100 a-pop-ul">
+                            <li class="nav-item me-3 ms-3 a-tbdr">
+                              <a class="nav-link h-100 p-0" href="#">
+                                <img class="img-fluid" src="https://akam.cdn.jdmagicbox.com/images/icontent/newwap/brand_connect/hp_hp_web.png?w=1080&q=75">
+                              </a>
                             </li>
-                            <li class="nav-item">
-                              <a class="nav-link" href="#">Link</a>
+                            <li class="nav-item me-3 ms-3 a-tbdr">
+                              <a class="nav-link h-100 p-0" href="#">
+                                <img class="img-fluid" src="https://akam.cdn.jdmagicbox.com/images/icontent/newwap/brand_connect/usha-Home-Page-web.png?w=1080&q=75">
+                              </a>
                             </li>
-                            <li class="nav-item">
-                              <a class="nav-link" href="#">Link</a>
+                            <li class="nav-item me-3 ms-3 a-tbdr">
+                              <a class="nav-link h-100 p-0" href="#">
+                                <img class="img-fluid" src="https://akam.cdn.jdmagicbox.com/images/icontent/newwap/brand_connect/ifb_web_hp.png?w=640&q=75">
+                              </a>
                             </li>
-                            <li class="nav-item">
-                              <a class="nav-link" href="#">Disabled</a>
+                            <li class="nav-item me-3 ms-3 a-tbdr">
+                              <a class="nav-link h-100 p-0" href="#">
+                                <img class="img-fluid" src="https://akam.cdn.jdmagicbox.com/images/icontent/newwap/brand_connect/mg-motors-web-hp.png?w=640&q=75">
+                              </a>
+                            </li>
+                            <li class="nav-item me-3 ms-3 a-tbdr">
+                              <a class="nav-link h-100 p-0" href="#">
+                                <img class="img-fluid" src="https://akam.cdn.jdmagicbox.com/images/icontent/newwap/brand_connect/ambuja.png?w=1080&q=75">
+                              </a>
+                            </li>
+                            <li class="nav-item me-3 ms-3 a-tbdr">
+                              <a class="nav-link h-100 p-0" href="#">
+                                <img class="img-fluid" src="https://akam.cdn.jdmagicbox.com/images/icontent/newwap/brand_connect/borosil.png?w=640&q=75">
+                              </a>
+                            </li>
+                            <li class="nav-item me-3 ms-3 a-tbdr">
+                              <a class="nav-link h-100 p-0" href="#">
+                                <img class="img-fluid" src="https://akam.cdn.jdmagicbox.com/images/icontent/newwap/brand_connect/tesla.png?w=640&q=75">
+                              </a>
+                            </li>
+                            <li class="nav-item me-3 ms-3 a-tbdr">
+                              <a class="nav-link h-100 p-0" href="#">
+                                <img class="img-fluid" src="https://akam.cdn.jdmagicbox.com/images/icontent/newwap/brand_connect/web_essae.png?w=640&q=75">
+                              </a>
+                            </li>
+                            <li class="nav-item me-3 ms-3 a-tbdr">
+                              <a class="nav-link h-100 p-0" href="#">
+                                <img class="img-fluid" src="https://akam.cdn.jdmagicbox.com/images/icontent/newwap/brand_connect/Web-Banners_eureka.png?w=640&q=75">
+                              </a>
+                            </li>
+                            <li class="nav-item me-3 ms-3 a-tbdr">
+                              <a class="nav-link h-100 p-0" href="#">
+                                <img class="img-fluid" src="https://akam.cdn.jdmagicbox.com/images/icontent/newwap/brand_connect/lupin.png?w=1080&q=75">
+                              </a>
+                            </li>
+                            <li class="nav-item me-3 ms-3 a-tbdr">
+                              <a class="nav-link h-100 p-0" href="#">
+                                <img class="img-fluid" src="https://akam.cdn.jdmagicbox.com/images/icontent/newwap/brand_connect/stanley.png?w=640&q=75">
+                              </a>
+                            </li>
+                            <li class="nav-item me-3 ms-3 a-tbdr">
+                              <a class="nav-link h-100 p-0" href="#">
+                                <img class="img-fluid" src="https://akam.cdn.jdmagicbox.com/images/icontent/newwap/brand_connect/nippon-web-hp.png?w=1080&q=75">
+                              </a>
                             </li>
                         </ul>
                     </div>
