--- a/index.html
+++ b/index.html
@@ -612,7 +612,7 @@
                                             <span class="text-white d-block fw-bold fs-5">XPERTS</span>
                                             <span class="fs-6 text-white opacity-50">Home services</span>
                                             <img alt="" class="img-fluid position-absolute bottom-0 end-0" src="./img/xperts.webp" >
-                                            <div class="a-b2b shadow p-1 text-white rounded-end position-absolute bottom-0 start-0" style="bottom:20px !important">Explore 
+                                            <div class="a-b2b shadow a-B p-1 text-white rounded-end position-absolute bottom-0 start-0" style="bottom:20px !important">Explore 
                                                 <i class="fa-lg d-inline-block h-100 fa-solid fa-chevron-right"></i></div>
                                         </a>
                                     </div>
@@ -621,7 +621,7 @@
                                             <span class=" d-block text-white fw-bold fs-5">Realestate</span>
                                             <span class="text-white fs-6 text-white opacity-50">Finest Agents</span>
                                             <img alt="" class="img-fluid img-fluid position-absolute bottom-0 end-0" src="./img/realestate.webp" >
-                                            <div class="a-b2b shadow p-1 text-white rounded-end position-absolute bottom-0 start-0" style="bottom:20px !important">Explore 
+                                            <div class="a-b2b shadow a-C p-1 text-white rounded-end position-absolute bottom-0 start-0" style="bottom:20px !important">Explore 
                                                 <i class="fa-lg d-inline-block h-100 fa-solid fa-chevron-right"></i></div>
                                         </a>
                                     </div>
@@ -630,7 +630,7 @@
                                             <span class=" d-block text-white fw-bold fs-5">Doctors</span>
                                             <span class=" fs-6 text-white opacity-50">Book Now</span>
                                             <img alt="" class="img-fluid img-fluid position-absolute bottom-0 end-0" src="./img/web_doctor_image.webp" >
-                                            <div class="a-b2b shadow p-1 text-white rounded-end position-absolute bottom-0 start-0" style="bottom:20px !important">Explore 
+                                            <div class="a-b2b shadow a-D p-1 text-white rounded-end position-absolute bottom-0 start-0" style="bottom:20px !important">Explore 
                                                 <i class="fa-lg d-inline-block h-100 fa-solid fa-chevron-right"></i></div>
                                         </a>
                                     </div>
@@ -978,6 +978,21 @@
                             </div>
                         </div>
                     </div>                     
+                </div>
+                <div class="a=m66 a-tbdr d-none d-sm-block">
+                    <div class="row m-0 a-tbdr h-100">
+                      <h3 class="fw-bold">Recent Activity</h3>
+                        <div class="col-4 h-100 a-tbdr">
+                            <h4 class="fw-bolder">TATA Play LTd (Customer Care)</h4>
+                            <a href="#">
+                              <div class="p-2 a-img">
+                                <img class="img-fluid" src="https://images.jdmagicbox.com/comp/mumbai/f9/022pxx22.xx22.101026190015.b4f9/catalogue/tata-sky-ltd-customer-care-mumbai-customer-care-services-40dgv67.jpg?clr=#4f2517">
+                              </div>
+                            </a>
+                        </div>
+                        <div class="col-4 h-100 a-tbdr">2</div>
+                        <div class="col-4 h-100 a-tbdr">3</div>
+                    </div>
                 </div>
                 <div class="a-m-Popular-Brands a-tbdr position-relative d-none d-sm-block overflow-hidden mb-5">
                     <h3 class="fw-bold">Popular Brands</h3>
