--- a/index.html
+++ b/index.html
@@ -990,8 +990,18 @@
                               </div>
                             </a>
                         </div>
-                        <div class="col-4 h-100 a-tbdr">2</div>
-                        <div class="col-4 h-100 a-tbdr">3</div>
+                        <div class="col-4 h-100 a-tbdr">
+                            <h4 class="fw-bolder">Bajaj Finserv Ltd (Customer Care)</h4>
+                            <a href="#">
+                            <img class="img-fluid" src="https://images.jdmagicbox.com/comp/mumbai/i9/022pxx22.xx22.140130171326.g6i9/catalogue/bajaj-finserv-ltd-customer-care--mumbai-xz3cvq9usn.jpg?clr=#1d3e49">
+                            </a>
+                        </div>
+                        <div class="col-4 h-100 a-tbdr">
+                            <h4 class="fw-bolder">Paytm.com</h4>
+                            <a href="#">
+                              <img class="img-fluid" src="https://images.jdmagicbox.com/comp/mumbai/d3/022pxx22.xx22.170728074134.w9d3/catalogue/paytm-com-mumbai-customer-care-4h27u24ahr.jpg?clr=#104b56">
+                            </a>
+                        </div>
                     </div>
                 </div>
                 <div class="a-m-Popular-Brands a-tbdr position-relative d-none d-sm-block overflow-hidden mb-5">
